# pipeline-gen-ai

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
src/application/: app.py  data_contract.py  db.py
src/project_03/: main.py
