[project]
name = "project-03"
version = "0.1.0"
description = ""
authors = [
    {name = "hcesarino",email = "heitor.cesarino@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "pydantic (>=2.11.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "project_03", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
