[project]
name = "project-03"
version = "0.1.0"
description = ""
authors = [
    {name = "hcesarino",email = "heitor.cesarino@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "pydantic[email] (>=2.11.3,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.12,<10.0.0)",
    "mkdocstrings (>=0.29.1,<0.30.0)",
    "mkdocstrings-python (>=1.16.10,<2.0.0)"
]

[tool.poetry]
packages = [{include = "project_03", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
